[package]
name = "nix-options"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

[lib]
name = "nix_options"
path = "src/lib.rs"

[[bin]]
name = "nix-options"
src = "src/main.rs"

[dependencies]
lazy_static = "1.4"
structopt = "0.3"
skim = "0.7.0"
console = "0.9.2"
nom = "5.1"
anyhow = "1.0"
thiserror = "1.0.10"

[dev-dependencies]
pretty_assertions = "0.6.1"
